Update documentation in CLAUDE.md and README.md for clarity and accuracy; enhance statechart and websocket guides with detailed explanations